# TypTaps

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  message.rs  pdfviewer.rs  ui.rs  utils.rs
src/old_version/: main.rs
